[workspace]
members = [
  "contracts/*",
  "packages/*",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Kromsten <kromsten@megarock.app>"]
repository = ""
license = ""


[workspace.dependencies]
cosmwasm-schema = { version = "^3.0.0", default-features = false}
cw-schema = { version = "^3.0.0" }
cw-storage-plus = { version = "3.0.1" }
cw-controllers = { version = "3.0.0" }
cw-utils = { version = "3.0.0" }
cw2 = { version = "3.0.0" }

cosmwasm-std = { version = "3.0.7" }
thiserror = { version = "2.0.18", default-features = false }  
schemars = { version = "1.2.1", default-features = false }
num-integer = { version = "0.1.46" }
serde = { version = "1.0.228", default-features = false }
semver = { version = "1.0.28" }


cw20-base = { path = "contracts/cw20-base", features = ["library"] }
cw20-bonding = { path = "contracts/cw20-bonding", features = ["library"] }

cw20 = { path = "packages/cw20" }


# [patch.crates-io]
# darling         = { version = "0.20.0" }
# darling_core    = { version = "0.20.0" }
# darling_macro   = { version = "0.20.0" }
# serde_with      = { version = "3.12.0" }
# serde_with_macros = { version = "3.12.0" }

[profile.release]
lto = true
rpath = false
overflow-checks = true
debug-assertions = false
debug = false
opt-level = 3
