[workspace]
members = [
  "contracts/*",
  "packages/*",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Kromsten <kromsten@megarock.app>"]
repository = ""
license = ""


[workspace.dependencies]
cosmwasm-schema = { version = "3.0.7", default-features = false}
cw-schema = { version = "3.0.7" }
cw-storage-plus = { version = "3.0.1" }
cw-controllers = { version = "3.0.0" }
cw-utils = { version = "3.0.0" }
cw2 = { version = "3.0.0" }

cosmwasm-std = { version = "3.0.7" }
thiserror = { version = "2.0.18", default-features = false }  
schemars = { version = "1.2.1", default-features = false }
num-integer = { version = "0.1.46" }
serde = { version = "1.0.228", default-features = false }
semver = { version = "1.0.28" }


cw20-base = { path = "contracts/cw20-base", features = ["library"] }
cw20-bonding = { path = "contracts/cw20-bonding", features = ["library"] }
cw20-staking = { path = "contracts/cw20-staking", features = ["library"] }
cw20-liquid-staking = { path = "contracts/cw20-liquid-staking", features = ["library"] }
cw20-liquid-bond = { path = "contracts/cw20-liquid-bond", features = ["library"] }
cw20 = { path = "packages/cw20" }


[profile.release]
lto = true
rpath = false
overflow-checks = true
debug-assertions = false
debug = false
opt-level = 3
