[package]
name = "cw20-bonding"
version = "0.14.2"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2018"
description = "Implement basic bonding curve to issue cw20 tokens"
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/cw-tokens"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw20 = { workspace = true }
cw-utils = { workspace = true }
cw2 = { workspace = true }

cw20-base = { workspace = true }

cw-storage-plus = { workspace = true }
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
thiserror = { workspace = true }
rust_decimal = "1.42.1"
integer-sqrt = "0.1.5"
integer-cbrt = "0.1.2"

