[package]
name = "cw20-liquid-staking"
version = "0.14.2"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2018"
description = "Implement simple staking derivatives as a cw20 token"
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/cw-tokens"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cw20-staking = { workspace = true }

cw-utils = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }
cw-controllers = { workspace = true }
cw20-base = { workspace = true }
cw-storage-plus = { workspace = true }
thiserror = { workspace = true }
cosmwasm-schema = { workspace = true }
cosmwasm-std = { features = ["staking", "cosmwasm_2_0"], workspace = true }

common = { path = "../../packages/common" }